# librtp

./: .MODULE_LICENSE_BSD  CMakeLists.txt  COPYING  README.md  atom.mk
include/rtp/: ntp.h  rtcp_pkt.h  rtp.h  rtp_jitter.h  rtp_pkt.h
src/: rtcp_pkt.c  rtp_jitter.c  rtp_pkt.c  rtp_priv.h
tests/: test_rtp_ntp.c
